--- a/UI.Web/Site.Master
+++ b/UI.Web/Site.Master
@@ -6,7 +6,10 @@
 <head runat="server">
     <title>Academia</title>
 
-    <link href="/Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>      
+    <link href="/Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/Bootstrap/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="/Bootstrap/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="/Bootstrap/bootstrap/css/bootstrap-theme.css" rel="Stylesheet" />   
     <link href="Bootstrap/Style.css" rel="stylesheet"/> 
 
 </head>
@@ -31,9 +34,9 @@
     </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/Bootstrap/jQuery/jquery.min.js"></script>
+    <script src="/Bootstrap/jQuery/jquery.min.js" type="text/javascript"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/Boostrap/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/Boostrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
 </body>
 </html>
